welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:2: error: ')' expected but integer literal found.
  case (<5,_) => return 0
         ^teaParty:8: error: '=>' expected but '}' found.
}} 
^