welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {(tea,candy) match {
  case (<5,_) => return 0
  case (_,<5) => return 0 
  case (>= candy*2,_) => return 2
  case (_,>= tea*2) => return 2
  case (>= 5, >= 5) => return 1
	case (_,_,_) => return 0  
}}